...
        Expanded(
          child: IssueWidget(issue: issueAttachment.issue),
        ),
        if (attachmentRule != null) ...[
          Tooltip(
            message: attachmentRule.enabled
                ? 'Attached by an enabled attachment rule'
                : 'Attached by a disabled attachment rule',
            child: InkWell(
              onTap: () => navigateToIssuePage(
                context,
                issueAttachment.issue.id,
                attachmentRuleId: attachmentRule.id,
...
          ),
          SizedBox(width: Spacing.level3),
        ],
        Tooltip(
          message: 'Detach issue',
          child: TextButton(
            key: const Key('detachIssueButton'),
            child: const Text('detach'),
            onPressed: () => showDetachIssueDialog(
              context: context,
              issue: issueAttachment.issue,
              testResultId: testResultId,
              testExecutionId: testExecutionId,
...
