...
                            child: IssueWidget(issue: widget.issue),
                          ),
                        ),
                      ),
                      if (attachmentRule != null) ...[
                        CheckboxListTile(
                          key: const Key('disableAttachmentRuleCheckbox'),
                          title: Text('Disable attachment rule'),
                          value: _disableAttachmentRule,
                          onChanged: attachmentRule.enabled
                              ? (selected) {
                                  setState(() {
                                    _disableAttachmentRule = selected ?? false;
...
                    'cancel',
                    style: buttonFontStyle?.apply(color: Colors.black),
                  ),
                ),
                const Spacer(),
                TextButton(
                  key: const Key('detachIssueFormSubmitButton'),
                  onPressed: () async {
                    // Ensure the form is valid before proceeding.
                    if (formKey.currentState?.validate() != true) return;

                    // Disable the attachment rule if requested
                    if (attachmentRule != null && _disableAttachmentRule) {
...
